# SystemProperties

./: .gitignore  CMakeLists.txt  Doxyfile.ini  LICENSE  README.md  SystemProperties.cpp  SystemProperties.hpp
